--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta charset="UTF-8" />
   <title>КиноВзор</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="/static/styles/style.css" rel="stylesheet">
+  <link href="/app/static/styles/styles.css" rel="stylesheet">
   <style>
     /* Дополнительные стили для уведомлений */
     .notification {
@@ -285,6 +285,6 @@
     </div>
   </div>
 
-  <script src="/static/js/script.js"></script>
+  <script src="/app/static/js/script.js"></script>
 </body>
 </html>
