Update: Replace HTML with new version from user

--- a/index.html
+++ b/index.html
@@ -1,12 +1,10 @@
-<!-- /templates/index.html -->
-<!-- /templates/index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8" />
   <title>КиноВзор</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="/app/static/styles/styles.css" rel="stylesheet">
+  <link href="/static/styles/style.css" rel="stylesheet">
   <style>
     /* Дополнительные стили для уведомлений */
     .notification {
@@ -285,6 +283,6 @@
     </div>
   </div>
 
-  <script src="/app/static/js/script.js"></script>
+  <script src="/static/js/script.js"></script>
 </body>
 </html>
